--- a/index.html
+++ b/index.html
@@ -37,11 +37,35 @@
         <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
 <a href="www.alura.com.br"  class="container__botao secundario__botao" >asine o combo+</a>
  </div>
-
-
+ <img class="secundario__imagem" src="Telas.png" alt="tela do alura+ e alura lingua">
  </section>
 
+ <section class="container secundario">
+    <img class="secundario__imagem" src="Notebook.png" alt="um Notebook com o alura plus aberto ">
+<div class="container__descricao">
+<h2 class="descricao__titulo"> baixe eus cursos</h2>
+<p class="descricao__texto"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+</div>
+</section>
 
+<section class="dispositivos">
+<h2 class="dispositivos__titulo"> Disponivel nos seus dispositivos favoritos</h2>
+<ul class="dispositivos__lista">
+<li>
+<img src="tv.png" alt="icone ded televisão">
+<h3 class="lista__item"> tv</h3>
+</li>
+
+<li>
+    <img src="computador.png" alt="icone de computador">
+    <h3 class="lista__item"> computador</h3>
+</li>
+
+<li> 
+    <img src="celular.png" alt="icone de celular">
+    <h3 class="lista__item">celular e tablets</h3>
+</li>
+</ul>
+</section>
 </body>
-
 </html>
