--- a/index.html
+++ b/index.html
@@ -7,65 +7,118 @@
     <title>Alura Plus</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="container principal">
-        <div>eitar a Alura+ e o Alureitar a Alura+ e o Alura Língua por um preçoeitar a Alura+ e o Alura Língua por um preçoa Língua por um preço
-        <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+        <div>eitar a Alura+ e o Alureitar a Alura+ e o Alura Língua por um preçoeitar a Alura+ e o Alura Língua por um
+            preçoa Língua por um preço
+            <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
+                único.
 
-        </h1>
-        <img src="Combo.png" alt=" o combo mais é a junção do Alura Língua">
-        <a hret="www.alura.com.br" class="container__botao"> assine por 12x de R$ 120,00*</a>
-        <a href="www.alura.com.br" class="container__botao botao_secundario">  Assinar somente o Alura+</a>
-        <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            </h1>
+            <img src="Combo.png" alt=" o combo mais é a junção do Alura Língua">
+            <a hret="www.alura.com.br" class="container__botao"> assine por 12x de R$ 120,00*</a>
+            <a href="www.alura.com.br" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
 
     <section class="container secundario">
         <img class="secundario__imagem" src="Plataformas.png" alt="um monitor e um cecular com o alura plus aberto">
-<div class="container__descricao">
-    <h2 class="descricao__titulo"> Assista do seu jeito</h2>
-<p class="descricao__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
-</div>
- </section>
- 
- <section class="container secundario">
-    <div class="container__descricao">
-        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
-<a href="www.alura.com.br"  class="container__botao secundario__botao" >asine o combo+</a>
- </div>
- <img class="secundario__imagem" src="Telas.png" alt="tela do alura+ e alura lingua">
- </section>
+        <div class="container__descricao">
+            <h2 class="descricao__titulo"> Assista do seu jeito</h2>
+            <p class="descricao__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
 
- <section class="container secundario">
-    <img class="secundario__imagem" src="Notebook.png" alt="um Notebook com o alura plus aberto ">
-<div class="container__descricao">
-<h2 class="descricao__titulo"> baixe eus cursos</h2>
-<p class="descricao__texto"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
-</div>
-</section>
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos
+                de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao">asine o combo+</a>
+        </div>
+        <img class="secundario__imagem" src="Telas.png" alt="tela do alura+ e alura lingua">
+    </section>
 
-<section class="dispositivos">
-<h2 class="dispositivos__titulo"> Disponivel nos seus dispositivos favoritos</h2>
-<ul class="dispositivos__lista">
-<li>
-<img src="tv.png" alt="icone ded televisão">
-<h3 class="lista__item"> tv</h3>
-</li>
+    <section class="container secundario">
+        <img class="secundario__imagem" src="Notebook.png" alt="um Notebook com o alura plus aberto ">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo"> baixe eus cursos</h2>
+            <p class="descricao__texto"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+        </div>
+    </section>
 
-<li>
-    <img src="computador.png" alt="icone de computador">
-    <h3 class="lista__item"> computador</h3>
-</li>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo"> Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="tv.png" alt="icone ded televisão">
+                <h3 class="lista__item"> tv</h3>
+            </li>
 
-<li> 
-    <img src="celular.png" alt="icone de celular">
-    <h3 class="lista__item">celular e tablets</h3>
-</li>
-</ul>
-</section>
+            <li>
+                <img src="computador.png" alt="icone de computador">
+                <h3 class="lista__item"> computador</h3>
+            </li>
+
+            <li>
+                <img src="celular.png" alt="icone de celular">
+                <h3 class="lista__item">celular e tablets</h3>
+            </li>
+        </ul>
+
+    </section>
+
+    <footer class="rodape">
+        <img class="rodape-logo" src="logo.png" alt="Alura+">
+        <ul class="rodape__lista">
+
+            <li class="lista_link">
+                <a href="#">Idioma</a>
+            </li>
+
+            <li class="lista_link">
+                <a href="#">disposivos compativeis</a>
+            </li>
+
+            <li class="lista_link">
+                <a href="#">Contratro de assinatura</a>
+            </li>
+
+
+            <li class="lista_link">
+                <a href="#">Politica de privacidade</a>
+            </li>
+
+            <li class="lista_link">
+                <a href="#">Proteçao de dados no Brasil</a>
+            </li>
+
+            <li class="lista_link">
+                <a href="#">Anuscios personalizados</a>
+            </li>
+
+
+            <li class="lista_link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
+            assinatura paga. Conteúdo sujeito a disponibilidade.
+
+        </p>
+        <p class="rodape__texto"> Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
+            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
+            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+
+    </footer>
+
 </body>
+
 </html>
